<resources>
    <string name="app_name">SpringAndroidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Não conectado</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_fragment_categories">Categorias</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_chart">Adicionar ao carrinho</string>
    <string name="description_img_product_detail">Imagem do produto</string>
    <string name="msg_product_detial_error">Erro ao obter produto</string>
    <string name="details">Detalhes</string>
    <string name="product">Produto</string>
    <string name="tx_empty_chart">Seu carrinho está vazio</string>
    <string name="finish_order">Finalizar Pedido</string>
    <string name="keep_buying">Continuar Comprando</string>
    <string name="total">Total</string>
    <string name="description_decrease_product">Diminuir produtos</string>
    <string name="description_increase_product">Aumentar produtos</string>
    <string name="cart">Carrinho</string>
    <string name="title_activity_login">Login</string>
    <string name="title_payment">Forma de pagamento</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="description_image_login">Imagem de Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="tx_login">Entrar</string>
    <string name="tx_signup">Registrar</string>
    <string name="msg_invalid_email_or_password">Email ou senha inválidos!</string>
    <string name="logout">Logout</string>
    <string name="pick_address_tittle">Fechamento de pedido</string>
    <string name="order_confirm_tittle">Confira seu pedido</string>
    <string name="comma">,</string>
    <string name="cep">CEP</string>
    <string name="pick_address">Selecione um endereço:</string>
    <string name="portions_in_card">Parcelas no Cartão:</string>
    <string name="payment_type">Tipo de pagamento:</string>
    <string name="card_payment">Pagamento com cartão</string>
    <string name="ticket_payment">Pagamento com Boleto</string>
    <string name="next">Próximo</string>
    <string name="order_portions">Parcelas: %1$d</string>
    <string name="payment">Pagamento</string>
    <string name="delivery_address">Endereço de entrega</string>
    <string name="client">Cliente</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="go_back">Voltar</string>
    <string name="order_items">Itens do pedido</string>
    <string name="message_order_registered">Seu pedido foi registrado!</string>
    <string name="message_order_code">Código do pedido: %1s\nVerifique seu email</string>
    <string name="hint_name">Nome</string>
    <string name="client_type">Tipo de cliente</string>
    <string name="simple_person">Pessoa física</string>
    <string name="legal_person">Pessoa jurídica</string>
    <string name="hint_cpf_ou_cnpj">CPF ou CNPJ</string>
    <string name="hint_street">Logradouro</string>
    <string name="hint_address_number">Número</string>
    <string name="hint_complement">Complemento</string>
    <string name="hint_neighborhood">Bairro</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_phone_2">Telefone 2</string>
    <string name="hint_phone_3">Telefone 3</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="signup">Criar conta</string>
    <string name="message_tittle_success">Sucesso</string>
    <string name="message_success_save">Cadastrado com sucesso!</string>
    <string name="ok">OK</string>
    <string name="tittle_profile">Perfil</string>
    <string name="permission">Permissão</string>
    <string name="cancel">Cancelar</string>
    <string name="permission_message_camera">Precisamos acessar a camera para completar a operação.</string>
    <string name="permission_message_gallery">Precisamos acessar a galeria para encontrar a foto.</string>
    <string name="upload_profile_picture">Enviar imagem de perfil</string>
    <string name="camera">Câmera</string>
    <string name="gallery">Galeria</string>
    <string name="send_image">Enviar Imagem</string>
    <string name="discard_image">Descartar Imagem</string>
    <string name="message_upload_picture">Carregando imagem, aguarde.</string>
    <string name="autenticate_error_title">Erro 401: falha de autenticação</string>
    <string name="autenticate_error_message">Email ou senha incorretos</string>
    <string name="default_error_title">Oops, ocorreu um erro: %1d</string>
    <string name="refresh_token_error">Refaça seu login!</string>
    <string name="validation_error_title">Erro de validação: 422</string>
    <string-array name="portions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
