<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/tittle_profile"/>
        <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_list_black_24dp"
                android:title="@string/title_fragment_categories"/>
        <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/cart"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout"/>

    </group>
</menu>
