<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignupActivity">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">


        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_name"
                android:hint="@string/hint_name" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                app:layout_constraintHorizontal_bias="0.043"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email_signup"
                android:hint="@string/hint_email"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_name" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
        <TextView
                android:text="@string/client_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_email_signup" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="@+id/et_email_signup"
                app:layout_constraintHorizontal_bias="0.0"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.0" android:id="@+id/rg_client_type">
            <RadioButton
                    android:text="@string/simple_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/rb_simple_person" android:layout_weight="1"
                    android:checked="true"/>
            <RadioButton
                    android:text="@string/legal_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/rb_legal_person" android:layout_weight="1"/>
        </RadioGroup>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/et_cpf_or_cnpj" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rg_client_type" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:hint="@string/hint_cpf_ou_cnpj"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password_signup" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_cpf_or_cnpj" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:hint="@string/hint_password"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_street" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_password_signup" android:hint="@string/hint_street"
                app:layout_constraintStart_toStartOf="@+id/et_password_signup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/et_number" android:inputType="text"/>
        <EditText
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/et_number" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_password_signup"
                app:layout_constraintStart_toEndOf="@+id/et_street"
                app:layout_constraintHorizontal_bias="0.5" android:hint="@string/hint_address_number"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_complement" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_street" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/et_neighborhood"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside" android:inputType="text"
                android:hint="@string/hint_complement"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_neighborhood" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_street"
                app:layout_constraintStart_toEndOf="@+id/et_complement"
                android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:hint="@string/hint_neighborhood"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_cep" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_complement" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:hint="@string/hint_cep"
                android:inputType="number|text|textPostalAddress"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_fone_1" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_cep" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:hint="@string/hint_phone" android:inputType="phone"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_fone_2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_fone_1" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:hint="@string/hint_phone_2" android:inputType="phone"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/et_fone_3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_fone_2" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:inputType="phone" android:hint="@string/hint_phone_3"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_states" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_fone_3" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView8" app:layout_constraintHorizontal_bias="0.5"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_cities" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sp_states" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView9" app:layout_constraintHorizontal_bias="0.5"/>
        <TextView
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/sp_states"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toTopOf="@+id/sp_states"
                app:layout_constraintBottom_toBottomOf="@+id/sp_states" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
        <TextView
                android:text="@string/city"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/sp_cities" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/sp_cities"/>
        <Button
                android:text="@string/signup"
                style="@style/ButtonBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bt_do_signup" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/sp_cities" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="112dp"
                android:layout_height="87dp"
                android:id="@+id/pb_signup" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/bt_do_signup" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.913" android:visibility="gone"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>