<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">

    <ImageView
            android:contentDescription="@string/description_image_login"
            android:layout_width="319dp"
            android:layout_height="0dp" app:srcCompat="@drawable/tela_inicial"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:scaleType="fitCenter" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:visibility="gone"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_login" app:layout_constraintVertical_bias="0.138"
            android:visibility="gone"/>
    <Button
            android:text="@string/tx_login"
            android:background="@color/colorBtnBlue"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_signup"
            app:layout_constraintEnd_toEndOf="@+id/bt_signup"
            app:layout_constraintStart_toStartOf="@+id/bt_signup" app:layout_constraintHorizontal_bias="0.0"
            android:visibility="gone"/>
    <Button
            android:text="@string/tx_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_signup"
            android:background="@drawable/btn_outline_border" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp" android:visibility="gone"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="79dp"
            android:layout_height="77dp"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>