<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".view.CartFragment">
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="370dp" android:id="@+id/rv_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/total"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_total"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/rv_cart"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"/>
    <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_total_value"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_cart"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:ellipsize="none"
            android:singleLine="true"/>
    <Button
            android:text="@string/keep_buying"
            android:padding="10dp"
            android:background="@color/colorBtnBlue"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_purchase_continue" android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.524" app:layout_constraintVertical_bias="0.84"/>
    <Button
            android:text="@string/finish_order"
            android:background="@color/colorBtnGreen"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_finalize"
            app:layout_constraintTop_toBottomOf="@+id/bt_purchase_continue"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.078"
            app:layout_constraintEnd_toEndOf="@+id/bt_purchase_continue"
            app:layout_constraintStart_toStartOf="@+id/bt_purchase_continue"
            android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/tx_empty_chart"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_empty_chart" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_cart" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.515"/>
</android.support.constraint.ConstraintLayout>